tests/e2e/not_allowed/nan.error
Error: syntax error in story at line 1, column 5

1|    a = nan
          ^^^

E0030: `nan` is reserved for future use
